<resources>
    <string name="app_name">Shop</string>
    <string name="english">English</string>
    <string name="change">Change</string>
    <string name="dot">.</string>
    <string name="facebook_icon">facebook_icon</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="login">Log in</string>
    <string name="password">Password</string>
    <string name="sign_up_for_facebook">Sign up for Facebook</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="help">help</string>
    <string name="or">OR</string>
    <string name="username">Username</string>
    <string name="don_t_remember_password">Forgot your login detail?</string>
    <string name="getHelp">Get help signing in.</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="search">Search</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>