<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginScreen2">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="283dp"
        android:layout_height="101dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/instagramlogo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_bg"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/icon" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/login_form_details"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/don_t_remember_password"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/help"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <TextView
        android:id="@+id/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/getHelp"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/forgot_password"
        app:layout_constraintEnd_toStartOf="@id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/forgot_password" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_bg"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/footer_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="50dp"
            android:background="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/login_form_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/facebook"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/log_in_with_facebook"
        android:textColor="@color/login_form_details"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/or"
        app:layout_constraintVertical_bias="0.133" />

    <View
        android:id="@+id/line1"
        android:layout_width="150dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/line1"
        app:layout_constraintTop_toTopOf="@+id/line1" />

    <View
        android:id="@+id/line2"
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintTop_toTopOf="@+id/or" />

  </androidx.constraintlayout.widget.ConstraintLayout>